@@ -172,6 +172,9 @@ public:
    float usecf() const
    { return (mTensOfUsecs*10.0f); }
 
+   vpr::Uint32 getBaseVal()
+   { return mTensOfUsecs; }
+
    bool operator ==(const Interval& r) const
    { return (mTensOfUsecs == r.mTensOfUsecs); }
 
